--- a/paginas/estilo/style.css
+++ b/paginas/estilo/style.css
@@ -24,7 +24,7 @@ header{
     width: 100%;
     top: 0;
     z-index: 1;
-    box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.229);
+    box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.3);
     overflow-x: auto;
 }
 header.header0{
@@ -93,7 +93,8 @@ header img{
     }
     
     nav.navproduto a.atual{
-        background-color: rgba(139, 0, 0, 0.8);
+        color: darkred;
+        background-color: rgba(0, 0, 0, 0.3);
     }
     nav img{
         flex: 1 1 auto;
