--- a/paginas/estilo/style.css
+++ b/paginas/estilo/style.css
@@ -44,16 +44,19 @@ nav a,nav p{
     padding: 5px;
     vertical-align: middle;
 }
-nav a:hover{
+nav a:hover, nav p:hover{
     background-color: darkred;
     color: white;
     cursor: pointer;
     transition-duration: 0.7s;
 }
-nav a.atual, nav a.atual:hover{
+nav a.atual, nav a.atual:hover, nav p.atual, nav p.atual:hover{
     background-color: darkred;
     color: white;
     cursor: default;
+}
+nav p::after{
+    content: "";
 }
 span#burger{
     color: darkred;
@@ -82,20 +85,20 @@ header img{
         justify-content: space-between;
         align-items: center;
     }
-    nav.navproduto{
+
+    nav.navbar{
         display: flex;
         flex-flow: row nowrap;
         justify-content: space-evenly;
-        align-items: flex-start;
-        border-top: 2px solid darkred;
-        height: 40px;
-        line-height: 30px;
+        align-items: center;
+        border: 2px solid darkred;
+        width: 100%;
+        background-color: white;
     }
-    
-    nav.navproduto a.atual{
-        color: darkred;
-        background-color: rgba(0, 0, 0, 0.3);
+    nav.navbar a{
+        flex: 1 1 auto;
     }
+
     nav img{
         flex: 1 1 auto;
         margin: 0px 20px;
@@ -156,6 +159,21 @@ header img{
         max-width: 50px;
         margin: auto;
     }
+        
+    nav.navbar{
+        display: flex;
+        flex-flow: column nowrap;
+        justify-content: space-evenly;
+        align-items: center;
+        border: 2px solid darkred;
+        width: 100%;
+        background-color: white;
+    }
+    nav.navbar a{
+        flex: 1 1 auto;
+        width: 100%;
+    }
+
 }
 
 
