--- a/paginas/estilo/style.css
+++ b/paginas/estilo/style.css
@@ -263,7 +263,7 @@ div.vid{
 }
 @media screen and (min-width: 769px){
     div.vid{
-        height: calc(100vh - 80px);
+        height: calc(100% - 50px);
     }
     div.vid video{
         height: 100%;
