--- a/paginas/estilo/style.css
+++ b/paginas/estilo/style.css
@@ -55,7 +55,9 @@ nav a.atual, nav a.atual:hover, nav p.atual, nav p.atual:hover{
     color: white;
     cursor: default;
 }
+
 span#burger{
+    font-weight: bold;
     color: darkred;
     display: block;
     text-align: center;
@@ -84,7 +86,7 @@ header img{
     }
 
     nav.navbar{
-        display: flex;
+        display: none;
         flex-flow: row nowrap;
         justify-content: space-evenly;
         align-items: center;
@@ -131,13 +133,9 @@ header img{
     nav a, nav p{
         display: block;
         color: darkred;
-        background-color: white;
+        background-color: lightgrey;
         border: 2px solid darkred;
         border-top: 0px;
-    }
-    nav a#prod{
-        border: 2px solid darkred;
-        padding: 0px;
     }
     nav a.atual::after{
         content: " [Pagina Atual]";
@@ -158,7 +156,7 @@ header img{
     }
         
     nav.navbar{
-        display: flex;
+        display: none;
         flex-flow: column nowrap;
         justify-content: space-evenly;
         align-items: center;
@@ -182,6 +180,7 @@ main{
     padding-top: 30px;
     padding-bottom: 30px;
     border-radius: 20px;
+    margin-top: 50px;
 }
 main h1{
     color: darkred;
