--- a/paginas/estilo/style.css
+++ b/paginas/estilo/style.css
@@ -86,7 +86,7 @@ header img{
     }
 
     nav.navbar{
-        display: none;
+        display: flex;
         flex-flow: row nowrap;
         justify-content: space-evenly;
         align-items: center;
@@ -156,7 +156,7 @@ header img{
     }
         
     nav.navbar{
-        display: none;
+        display: flex;
         flex-flow: column nowrap;
         justify-content: space-evenly;
         align-items: center;
