--- a/paginas/estilo/style.css
+++ b/paginas/estilo/style.css
@@ -44,13 +44,13 @@ nav a,nav p{
     padding: 5px;
     vertical-align: middle;
 }
-nav a:hover, nav p:hover{
-    background-color: darkred;
+nav a:hover, nav p:hover, nav p.atual, nav p.atual:hover{
+    background-color: red;
     color: white;
     cursor: pointer;
     transition-duration: 0.7s;
 }
-nav a.atual, nav a.atual:hover, nav p.atual, nav p.atual:hover{
+nav a.atual, nav a.atual:hover{
     background-color: darkred;
     color: white;
     cursor: default;
@@ -92,7 +92,7 @@ header img{
         align-items: center;
         border-top: 2px solid darkred;
         width: 100%;
-        background-color: white;
+        background-color: lightgray;
     }
     nav.navbar a{
         flex: 1 1 auto;
