--- a/paginas/estilo/style.css
+++ b/paginas/estilo/style.css
@@ -168,7 +168,10 @@ header img{
         flex: 1 1 auto;
         width: 100%;
     }
-
+    nav a.atual, nav p.atual{
+        background-color: lightgray;
+        color: darkred;
+    }
 }
 
 
