--- a/paginas/estilo/style.css
+++ b/paginas/estilo/style.css
@@ -14,6 +14,8 @@
 }
 body,html{
     height: 100vh;
+    width: 100vw;
+    overflow-x: hidden;
     background-color:whitesmoke;
 }
 
@@ -290,11 +292,13 @@ picture.imaggraf{
     }
     img.imageB{
         display: block;
+        max-width: 90vw;
     }
 }
 @media screen and (max-width: 768px){
     img.imageA{
         display: block;
+        width: 99vw;
     }
     img.imageB{
         display: none;
