--- a/paginas/estilo/style.css
+++ b/paginas/estilo/style.css
@@ -292,7 +292,7 @@ picture.imaggraf{
     }
     img.imageB{
         display: block;
-        max-width: 90vw;
+        width: 90vw;
     }
 }
 @media screen and (max-width: 768px){
