--- a/paginas/estilo/style.css
+++ b/paginas/estilo/style.css
@@ -14,7 +14,7 @@
 }
 body,html{
     height: 100vh;
-    width: 100vw;
+    max-width: 100vw;
     overflow-x: hidden;
     background-color:whitesmoke;
 }
