--- a/paginas/estilo/style.css
+++ b/paginas/estilo/style.css
@@ -353,27 +353,32 @@ footer{
 footer p{
     padding: 10px;
 }
+footer div.links{
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-evenly;
+    align-items: flex-start;
+}
 footer ul{
-    display: inline-block;
     margin-right: 50px;
     margin-left: 50px;
     text-align: start;
 }
-footer ul li.titulo{
+footer li.titulo{
     list-style-type: none;
     transform: translate(-20px); 
 }
-footer ul li a{
+footer ul a{
     color: white;
     text-decoration: none;
     border-radius: 5px;
 }
-footer ul li a:hover{
+footer ul a:hover{
     background-color: white;
     color: darkred;
     cursor: pointer;
 }
-footer ul li  a::after{
+footer ul a::after{
     content: " [link]";
     font-size: 0.7em;
 }
