--- a/paginas/estilo/style.css
+++ b/paginas/estilo/style.css
@@ -180,7 +180,7 @@ header img{
 main{
     max-width: 900px;
     min-width: 300px;
-    width: 90%;
+    width: 90vw;
     margin: auto;
     margin-top: 30px;
     margin-bottom: 30px;
@@ -380,7 +380,7 @@ footer ul a{
     text-decoration: none;
 }
 footer ul a:hover{
-    text-shadow: 2px 2px 3px white, 0 0 5px white;
+    text-shadow: 2px 2px 5px white, 0 0 10px yellow;
     cursor: pointer;
 }
 footer ul a::after{
