--- a/paginas/estilo/style.css
+++ b/paginas/estilo/style.css
@@ -25,7 +25,7 @@ header{
     position: fixed;
     width: 100%;
     top: 0;
-    z-index: 1;
+    z-index: 2;
     box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.3);
     overflow-x: auto;
 }
@@ -76,9 +76,9 @@ header img{
     vertical-align: middle;
 }
 
-    nav#navhome, nav#navproduto, nav#navparceiros{
-        display: none;
-    }
+nav#navhome, nav#navproduto, nav#navparceiros{
+    display: none;
+}
 
 @media screen and (min-width: 769px){
     header{
@@ -273,10 +273,11 @@ div.vid{
 }
 div.vid > img.capa {
     width: 100%;
+    height: 100%;
     position: absolute;
     object-fit: cover;
     cursor: pointer;
-    z-index: 2;
+    z-index: 1;
 }
 
 div.mvp{
