--- a/paginas/estilo/style.css
+++ b/paginas/estilo/style.css
@@ -13,8 +13,8 @@
     --cor01:rgb(99,100,102);
 }
 body,html{
-    height: 100vh;
-    max-width: 100vw;
+    height: 100dvh;
+    width: 100%;
     overflow-x: hidden;
     background-color:whitesmoke;
 }
